# cma-microvm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Justfile  KNOWLEDGE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  template.yaml
.claude/skills/speckit-cycle/: SKILL.md  reference.md
.claude/skills/speckit-drill/: SKILL.md
.claude/skills/speckit-learn/: SKILL.md
.github/workflows/: ci.yml
.specify/: cycle-state.json  feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
container/: Dockerfile  dynamodb_init.py
launcher/: README.md  pyproject.toml
launcher/scripts/: build-image.sh
launcher/src/launcher/: asyncio_utils.py  config.py  launcher.py  logging.py
launcher/src/launcher/shared/: constants.py  microvm_client.py  stub_client.py
launcher/tests/: _in_memory_idempotency.py
launcher/tests/contract/: test_mangum_handler.py
launcher/tests/unit/: test_payload.py
specs/001-launcher-container-cdk/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-launcher-container-cdk/checklists/: requirements.md  security.md
specs/001-launcher-container-cdk/contracts/: webhook.md
src/functions/: launcher.py  requirements.txt
src/functions/shared/: constants.py  microvm_client.py  payload.py  rate_limiter.py  types.py
src/functions/wheels/: boto3-1.43.34-py3-none-any.whl
src/launcher/: app.py
src/launcher/shared/: microvm_client.py  payload.py  rate_limiter.py  types.py
src/microvm-image/: Dockerfile
src/microvm-image/worker/: package.json  worker.mjs
src/scripts/: build-image.sh  verify.py
tests/: conftest.py
tests/contract/: test_webhook.py
tests/integration/: test_dispatch_flow.py
tests/unit/: test_idempotency.py
utils/cdk/: app.py  cdk.json  pyproject.toml
utils/cdk/control_plane/: __init__.py  api_construct.py  idempotency_construct.py  lambda_construct.py  secrets_construct.py  stack.py
utils/cdk/tests/: test_control_plane.py
worker/: README.md  pyproject.toml
worker/src/worker/: __init__.py
worker/tests/: test_smoke.py
