[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-microvm-sandbox"
version = "0.1.0"
description = "Reference solution: Claude self-hosted sandboxes on AWS Lambda MicroVMs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT-0" }
dependencies = [
    "anthropic>=0.40",
    "boto3>=1.34",
]

[tool.setuptools.packages.find]
where = ["src/functions"]
include = ["shared*"]
