[project]
name = "claude-microvm-launcher"
version = "0.1.0"
description = "Claude self-hosted sandbox launcher: FastAPI/Mangum app + CDK control plane"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT-0" }
dependencies = [
    "fastapi>=0.115",
    "mangum>=0.18",
    "uvicorn[standard]>=0.30",
    "anthropic[webhooks]>=0.69",
    "aws-lambda-powertools>=3.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "botocore",
    "boto3",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "anyio>=4.0",
    "pytest-asyncio>=0.23",
]

[tool.uv]
package = false

[tool.uv.sources]
botocore = { path = "src/launcher/wheels/botocore-1.43.34-py3-none-any.whl" }
boto3 = { path = "src/launcher/wheels/boto3-1.43.34-py3-none-any.whl" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"
