[project]
name = "cma-microvm-worker"
version = "0.1.0"
description = "In-MicroVM lifecycle-hook worker (Python port — scaffold only; follow-up spec)"
requires-python = ">=3.11"
license = { text = "MIT-0" }
dependencies = []

[dependency-groups]
dev = ["ruff>=0.6", "pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]