[project]
name = "cma-microvm-cdk"
version = "0.1.0"
description = "CDK control plane for the Claude MicroVM launcher"
requires-python = ">=3.11"
dependencies = ["aws-cdk-lib>=2.180", "constructs>=10.3"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]